# flet-app-template

default/{{cookiecutter.out_dir}}/: pyproject.toml
default/{{cookiecutter.out_dir}}/data/: README.md
default/{{cookiecutter.out_dir}}/src/: main.py
default/{{cookiecutter.out_dir}}/temp/: README.md
flutter-extension/: cookiecutter.json
flutter-extension/{{cookiecutter.out_dir}}/: README.md  pyproject.toml
flutter-extension/{{cookiecutter.out_dir}}/examples/{{cookiecutter.project_name}}_example/: pyproject.toml
flutter-extension/{{cookiecutter.out_dir}}/examples/{{cookiecutter.project_name}}_example/src/: main.py
flutter-extension/{{cookiecutter.out_dir}}/src/flutter/flet_spinkit/: pubspec.yaml
flutter-extension/{{cookiecutter.out_dir}}/src/flutter/{{cookiecutter.project_name}}/: README.md  pubspec.yaml
flutter-extension/{{cookiecutter.out_dir}}/src/flutter/{{cookiecutter.project_name}}/lib/src/: create_control.dart  {{cookiecutter.project_name}}.dart
flutter-extension/{{cookiecutter.out_dir}}/src/{{cookiecutter.project_name}}/: __init__.py  spinkit.py  {{cookiecutter.project_name}}.py
