[project]
name = "flet-spinkit"
version = "0.1.0"
description = "Spinkit control for Flet"
readme = "README.md"
authors = [
    { name = "Flet contributors", email = "hello@flet.dev" }
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.8"
dependencies = [
    "flet==0.26.0.dev3957",
]

[project.urls]
Homepage = "https://flet.dev"
Documentation = "https://github.com/InesaFitsner/flet-spinkit"
Repository = "https://github.com/InesaFitsner/flet-spinkit"
Issues = "https://github.com/InesaFitsner/flet-spinkit/issues"

[tool.setuptools.package-data]
"flutter.flet_spinkit" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]==0.26.0.dev3957",
]

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
