[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_name.replace('-','_').split('_')|map('capitalize')|join}} control for Flet"
readme = "README.md"
authors = [
    { name = "Flet contributors", email = "hello@youremail.dev" }
]
requires-python = ">=3.8"
dependencies = [
    "flet>=0.26.0",
]

[project.urls]
Homepage = "https://mydomain.dev"
Documentation = "https://github.com/MyGithubAccount/{{cookiecutter.project_name}}"
Repository = "https://github.com/MyGithubAccount/{{cookiecutter.project_name}}"
Issues = "https://github.com/MyGithubAccount/{{cookiecutter.project_name}}/issues"

[tool.setuptools.package-data]
"flutter.{{cookiecutter.project_name}}" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]>=0.26.0",
]

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
